# inkwell

./: .dev-env  .env.example  .gitignore  .lintstagedrc.json  .lsp.json  .mcp.json  .prettierignore  Makefile  README.md  TESTING.md  Taskfile.yml  eslint.config.js  eslint.config.ts  index.html  jest.config.ts  package-lock.json  package.json  postcss.config.ts
.claude/: CLAUDE.md  CLAUDE_DOCUMENTATION.md  settings.json  statusline-command.sh
.claude/agents/: architect-agent.md  dev-agent.md  dev-engineer.md  documentarian-agent.md  git-agent.md  git-workflow.md  qa-agent.md
.claude/plans/: .gitignore  149-git-lint.md  flickering-fluttering-cocoa.md  squishy-swinging-lampson.md
.claude/rules/: api.md  github.md  testing.md  ui.md  unit-test.md  workflow.md
.claude/skills/api-engineer/: SKILL.md
.claude/skills/architect/: SKILL.md
.claude/skills/architect-agent/: SKILL.md
.claude/skills/captain/: SKILL.md
.claude/skills/claude-code-action/: SKILL.md
.github/: CLAUDE.md  CURRENT.md  settings.yml
.github/workflows/: README.md  api-ci.yml  ci-cd.yml  ci.yml  cicd.yml  claude.yml  deploy.yml  quality-gate.yml  ui-ci.yml
.husky/: commit-msg  pre-commit
.tmp/: .gitignore
api/: .coverage  .env.example  .gitignore  README.md  Taskfile.yml  langgraph.json  pyproject.toml
api/ai/: lab.ipynb
api/ai/lab/: lab.messages.ipynb
api/app/: config.py  github_articles.py  main.py  main_mcp.py  main_rest.py
api/app/ai/: graph.py  service.py
api/app/ai/lab/: lab.humanInTheLoop.ipynb  lab.mcp.ipynb  lab.memory.ipynb  lab.messages.ipynb  lab.tools.ipynb
api/app/mcp/: __init__.py  handlers.py  prompts.py  resources.py  server.py  tools.py
api/app/models/: ai.py  article.py  auth.py  chat.py
api/app/routers/: ai.py  articles.py  auth.py  chat.py  health.py
api/app/shared/: __init__.py  auth.py  config.py  middleware.py
api/lab/: anthropic_api.ipynb  bedrock.ipynb  dynamic_prompts.ipynb  human_in_the_loop.ipynb  inkwell_mcp.ipynb  langgraph.ipynb  mcp.ipynb  memory.ipynb  messages.ipynb  multi_agent.ipynb  streaming.ipynb  structured_output.ipynb  tools.ipynb
api/lab/claude/: anthropic_api.ipynb  bm25_index.py  vector_index.py
api/lab/langchain/: dynamic_prompts.ipynb  human_in_the_loop.ipynb  mcp.ipynb  memory.ipynb  messages.ipynb  multi_agent.ipynb  streaming.ipynb  structured_output.ipynb  studio_agent.py  tools.ipynb
api/lab/langgraph/: artile_research.ipynb  mood_agent.ipynb
api/lab/mcp_transport/: mcp_http_server.py  mcp_stdin_server.py
api/tests/: conftest.py  test_ai.py  test_articles.py  test_auth.py  test_chat.py  test_config.py  test_github_articles.py  test_health.py  test_mcp_handlers.py  test_mcp_resources.py  test_mcp_startup.py  test_middleware.py  test_rest_startup.py
articles/building-a-writing-studio/: content.md  meta.json
articles/consent-impossibility/: content.md  meta.json
articles/e2e-test/: meta.json
articles/getting-started-with-typescript/: content.md  meta.json  publish-log.json
articles/git-workflow-for-writers/: content.md  meta.json
articles/new-article/: content.md  meta.json
articles/newart/: content.md  meta.json
articles/performance-aware-architecture/: content.md  meta.json
articles/visualizing-systems-with-mermaid/: content.md  meta.json
cli/: .env.example
scripts/: file-lint.sh  git-lint.sh
src/: main.tsx
src/app/: globals.css  layout.tsx
src/components/: ArticleList.test.js  ArticleList.tsx  EditorPane.test.js  EditorPane.test.tsx  EditorPane.tsx  MermaidBlock.test.tsx  MermaidBlock.tsx  SidePanel.test.tsx  SidePanel.tsx  TocTab.test.tsx  TocTab.tsx  VersionStrip.test.tsx  VersionStrip.tsx
src/hooks/: useAnchorNavigation.test.ts  useAnchorNavigation.ts  useScrollTracking.test.ts  useScrollTracking.ts
ui/: .env.example  .gitignore  Taskfile.yml  eslint.config.ts  index.html  jest.config.ts  jest.setup.env.ts  jest.transform.cjs  jest.transform.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: vite-env.d.ts
(+39 files in other folders)
