[project]
name = "inkwell-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pygments>=2.20.0",
]

[project.optional-dependencies]
ai = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-mcp-adapters>=0.1",
    "anthropic>=0.87.0",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipython>=8.0",
    "ipykernel>=6.0",
    "nest-asyncio>=1.5",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
