[project]
name = "inkwell-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pygments>=2.20.0",
    "nest-asyncio>=1.5",
    "python-dotenv>=1.0",
    "langgraph>=0.1",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "anthropic>=0.87.0",
    "cryptography>=46.0.7",
    "langchain-core>=1.2.28",
    "boto3>=1.42.96",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "pip-audit>=2.7",
    "langgraph-cli[inmem]>=0.1",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipython>=8.0",
    "ipykernel>=6.0",
    "voyageai>=0.3.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors (core code-style correctness)
    "F",       # Pyflakes (unused imports, undefined names, etc.)
    "I",       # import sorting/order (isort-compatible)
    "N",       # naming conventions (PEP 8 naming consistency)
    "D",       # docstring conventions (pydocstyle)
    "ANN",     # type annotation presence checks
    "UP",      # pyupgrade rules (modern Python syntax)
    "B",       # flake8-bugbear (likely bugs and risky patterns)
]
ignore = [
    "E501",    # line too long
    "D205",    # 1 blank line between summary and description
    "D212",    # multi-line summary should start at first line
    "D100",    # missing docstring in public module
    "D104",    # missing docstring in public package
    "D203",    # conflicts with D211
    "D213",    # conflicts with D212
    "B904",    # allow plain raise HTTPException in except blocks
    "B905",    # allow zip() without strict in compatibility code
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests prioritize behavior verification while still enforcing annotations.
# Keep bug-prone checks except B007 loops.
"tests/**/*.py" = ["D", "B007"]

# Lab notebooks are educational/interactive artifacts. Relax strictness to avoid
# blocking the quality gate on exploratory code. Still enforce core syntax/imports.
# D: docstrings (notebooks use markdown cells instead)
# B: bugbear (less relevant for interactive exploration)
# E402: module level import not at top (inherent in interactive notebooks)
# ANN: type annotations (exploratory notebooks don't require full annotations)
"lab/**/*.ipynb" = ["D", "B", "E402", "ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
